@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.3-2
-Date: 2020-12-24
+Date: 2020-12-28
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Contact: Doug and Martin <Matrix-authors@R-project.org>
